--- a/src/main/resources/templates/earthquakes/results.html
+++ b/src/main/resources/templates/earthquakes/results.html
@@ -19,10 +19,22 @@
                 <th>Minimum Magnitude</th>
                 <td th:text="${eqSearch.minmag}"></td>
             </tr>
+       </table>
+       
+	<h2> Results</h2>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Type</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td th:text="${featureCollection.type}"></td>
+                </tr>
+            </tbody>
         </table>
-
-        <h2>JSON Results</h2>
-
         <pre th:text="${json}">This is placeholder</pre>
       <div th:replace="bootstrap/bootstrap_footer.html"></div>
     </div>
