--- a/src/main/resources/templates/earthquakes/results.html
+++ b/src/main/resources/templates/earthquakes/results.html
@@ -29,6 +29,7 @@
                   <th>Type</th>
 		  <th>Url</th>
 		  <th>Count</th>
+		  <th>Title</th>
                 </tr>
             </thead>
             <tbody>
@@ -36,6 +37,7 @@
                   <td th:text="${featureCollection.type}"></td>
 		  <td th:text="${featureCollection.metadata.url}"></td>
 		  <td th:text="${featureCollection.metadata.count}"></td>
+		  <td th:text="${featureCollection.metadata.title}"></td>
                 </tr>
             </tbody>
         </table>
