YS - made id clickable

--- a/src/main/resources/templates/earthquakes/results.html
+++ b/src/main/resources/templates/earthquakes/results.html
@@ -52,8 +52,9 @@
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="f: ${featureCollection.features}"> 
-                    <td th:text="${f.id}"></td>
+              <tr th:each="f: ${featureCollection.features}">
+		    <td><a th:href="${f.metadata.url}" th:text="${f.id}"></a></td>
+      
                     <td th:text="${f.properties.place}"></td>
                     <td th:text="${f.properties.mag}"></td>
                 </tr>
