--- a/src/main/resources/templates/earthquakes/results.html
+++ b/src/main/resources/templates/earthquakes/results.html
@@ -9,42 +9,21 @@
       <div th:replace="bootstrap/bootstrap_nav_header.html"></div>
 
        <h1>Earthquake Search Results</h1>
-       
-        <table class="table">
-            <thead>
-              <tr>
-		<th>Distance (km)</th>
-		<th>Minimum Magnitude</th>
-		  <th>Title</th>
-		  <th>Count</th>
-                </tr>
-            </thead>
-            <tbody>
-              <tr>
-		<td th:text="${eqSearch.distance}"></td>
-		<td th:text="${eqSearch.minmag}"></td>
-		  <td><a th:href="${featureCollection.metadata.url}" th:text="${featureCollection.metadata.title}"></a></td>
-		  <td th:text="${featureCollection.metadata.count}"></td>
-                </tr>
-            </tbody>
+
+       <table>
+            <tr>
+                <th>Distance (km)</th>
+                <td th:text="${eqSearch.distance}"></td>
+            </tr>
+            <tr>
+                <th>Minimum Magnitude</th>
+                <td th:text="${eqSearch.minmag}"></td>
+            </tr>
         </table>
-	<h3>Earthquakes</h3>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>id</th>
-                    <th>place</th>
-                    <th>mag</th>
-                </tr>
-            </thead>
-            <tbody>
-              <tr th:each="f: ${featureCollection.features}">
-		    <td><a th:href="${f.properties.url}" th:text="${f.id}"></a></td>      
-                    <td th:text="${f.properties.place}"></td>
-                    <td th:text="${f.properties.mag}"></td>
-                </tr>
-            </tbody>
-        </table>
+
+        <h2>JSON Results</h2>
+
+        <pre th:text="${json}">This is placeholder</pre>
       <div th:replace="bootstrap/bootstrap_footer.html"></div>
     </div>
     <div th:replace="bootstrap/bootstrap_scripts.html"></div>
