--- a/src/main/resources/templates/locations/results.html
+++ b/src/main/resources/templates/locations/results.html
@@ -28,7 +28,7 @@
            </tr>
          </thead>
          <tbody>
-           <tr th:each="p: ${place}"> 
+           <tr th:each="p: ${places}"> 
 
              <td th:text="${p.place_id}"></td>
              <td th:text="${p.lat}"></td>
