--- a/src/main/resources/templates/locations/results.html
+++ b/src/main/resources/templates/locations/results.html
@@ -10,10 +10,17 @@
 
        <h1>Location Search Results</h1>
        <table class="table">
+	 <thead>
          <tr>
              <th>Location</th>
-             <td th:text="${locSearch.location}"></td>
          </tr>
+	 </thead>
+	 <tbody>
+	   <tr>
+	     <td th:text="${locSearch.location}"></td>
+	   </tr>
+	 </tbody>
+	 
      </table>
 
      <h2>Location Search Results</h2>
