YS - added locations table

--- a/src/main/resources/templates/bootstrap/bootstrap_nav_header.html
+++ b/src/main/resources/templates/bootstrap/bootstrap_nav_header.html
@@ -14,7 +14,10 @@
              <a class="nav-link" href="/locations/search">Locations</a>
             </li>
 	    <li class="nav-item">
-                <a class="nav-link" href="/users">Users</a>
+              <a class="nav-link" href="/users">Users</a>
+            </li>
+	    <li class="nav-item">
+                <a class="nav-link" href="/locations">Favorites</a>
             </li>
         </ul>
 
